Fixed alignment issues

--- a/styles/main.css
+++ b/styles/main.css
@@ -106,11 +106,17 @@ footer {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
+  align-items: center;
   position: fixed;
   bottom: 0;
   height: 10vh;
   background-color: rgb(1, 5, 4);
   width: 100%;
+}
+footer div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 footer div p {
   color: white;
@@ -121,9 +127,7 @@ footer div i {
   animation-name: bounce;
   animation-iteration-count: infinite;
   animation-duration: 2s;
-  padding-left: 20px;
   font-size: 0.8rem;
-  text-align: center;
 }
 @keyframes bounce {
   0% {
